--- a/pages/3633.html
+++ b/pages/3633.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1437,7 +1437,7 @@ margin-left: 0em;
 <p>graphics grabbed form <a href="#FrolovZelnikov11">Frolov-Zelnikov 11</a></p>
 </blockquote>
 
-<p>However, the general idea Wick rotation is sometimes also appealed to in situations where the assumptions of such theorems are evidently violated. For instance, it has been appealed to a lot in an approach to <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a> often known as “Euclidean quantum gravity”, where, however, by definition the assumption of global spacetime translation invariance is manifestly violated. In such a context the exact meaning of Wick rotation remains mysterious, and yet on this basis some subtle relations between quantum mechanics and thermodynamics, such as the <a class="existingWikiWord" href="/nlab/show/Bekenstein-Hawking+entropy">Bekenstein-Hawking entropy</a>, find elegant explanations, at least at the level of the manipulation of formulas (see e.g. <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 4</a>).</p>
+<p>Wick rotation also applies on suitable <span class="newWikiWord">black-hole<a href="/nlab/new/black-hole">?</a></span>-<a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> spring thermodynamics, such as the <a class="existingWikiWord" href="/nlab/show/Bekenstein-Hawking+entropy">Bekenstein-Hawking entropy</a>, find elegant explanations, at least at the level of the manipulation of formulas (see e.g. <a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 4</a>).</p>
 
 <h3 id="example">Example</h3>
 
@@ -1489,10 +1489,22 @@ margin-left: 0em;
 <li id="HoeghKrohn74"><a class="existingWikiWord" href="/nlab/show/Raphael+H%C3%B8egh-Krohn">Raphael Høegh-Krohn</a>, <em>Relativistic Quantum Statistical Mechanics in two-dimensional Space-Time</em>, Communications in Mathematical Physics 38.3 (1974): 195-224 (<a href="https://www.duo.uio.no/bitstream/handle/10852/44072/1973-22.pdf">pdf</a>)</li>
 </ul>
 
-<p>Good review on the relation to <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a> is in</p>
+<p>Good review on the relation to <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a> and <a class="existingWikiWord" href="/nlab/show/black+hole+thermodynamics">black hole thermodynamics</a> is in</p>
 
 <ul>
-<li id="FullingRuijsenaars87">S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</li>
+<li id="FullingRuijsenaars87">
+<p>S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</p>
+</li>
+
+<li id="GibbonsPerry78">
+<p><a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, Malcolm J. Perry, <em>Black Holes and Thermal Green Functions</em>, Vol. 358, No. 1695 (1978) (<a href="https://www.jstor.org/stable/79482">jstor:79482</a>)</p>
+</li>
+</ul>
+
+<p>Discussion of thermal Wick rotation on global <a class="existingWikiWord" href="/nlab/show/anti-de+Sitter+spacetime">anti-de Sitter spacetime</a> (which is already periodic in <em>real</em> time) is in</p>
+
+<ul>
+<li id="AllenFolacciGibbons87">B. Allen, A. Folacci, <a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, <em>Anti-de Sitter space at finite temperature</em>, Physics Letters B Volume 189, Issue 3, 7 May 1987, Pages 304-310 (<a href="https://doi.org/10.1016/0370-2693(87)91437-7">doi:10.1016/0370-2693(87)91437-7</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1516,14 +1528,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 09:38:07.
+  Last revised on November 15, 2018 at 09:29:07.
   See the <a href="https://ncatlab.org/nlab/history/Wick rotation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wick rotation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
