--- a/pages/18905.html
+++ b/pages/18905.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1060,9 +1060,19 @@ margin-left: 0em;
 <p><a href="#FullingRuijsenaars87">Fulling-Ruijsenaars 87, section 4</a></p>
 </li>
 
+<li id="GibbonsPerry78">
+<p><a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, Malcolm J. Perry, <em>Black Holes and Thermal Green Functions</em>, Vol. 358, No. 1695 (1978) (<a href="https://www.jstor.org/stable/79482">jstor:79482</a>)</p>
+</li>
+
 <li id="FrolovZelnikov11">
 <p><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, section F4.4 of <em>Introduction to black hole physics</em>, Oxford 2011</p>
 </li>
+</ul>
+
+<p>Discussion of thermal <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> on global <a class="existingWikiWord" href="/nlab/show/anti-de+Sitter+spacetime">anti-de Sitter spacetime</a> (which is already periodic in <em>real</em> time) is in</p>
+
+<ul>
+<li id="AllenFolacciGibbons87">B. Allen, A. Folacci, <a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, <em>Anti-de Sitter space at finite temperature</em>, Physics Letters B Volume 189, Issue 3, 7 May 1987, Pages 304-310 (<a href="https://doi.org/10.1016/0370-2693(87)91437-7">doi:10.1016/0370-2693(87)91437-7</a>)</li>
 </ul>
 
 <p>See also</p>
@@ -1086,14 +1096,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 08:17:18.
+  Last revised on November 15, 2018 at 09:30:13.
   See the <a href="https://ncatlab.org/nlab/history/Euclidean field theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Euclidean+field+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Euclidean+field+theory/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Euclidean+field+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Euclidean+field+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Euclidean field theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
