--- a/pages/4442.html
+++ b/pages/4442.html
@@ -1016,7 +1016,43 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#examples">Examples</a><ul><li><a href="#AdS5CFT4"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math> – Horizon limit of D3-branes</a></li><li><a href="#AdS7CFT6"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">AdS_7 / CFT_6</annotation></semantics></math> – Horizon limit of M5-branes</a></li><li><a href="#AdS4CFT3"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">AdS_4 / CFT_3</annotation></semantics></math> –Horizon limit of M2-branes</a></li><li><a href="#AdS3CFT2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>3</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">AdS_3 / CFT_2</annotation></semantics></math> – Horizon limit of D1-D5 brane bound states</a></li><li><a href="#nonconformal_duals">Non-conformal duals</a><ul><li><a href="#horizon_limit_of_branes_for_arbitrary_">Horizon limit of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Dp</mi></mrow><annotation encoding="application/x-tex">Dp</annotation></semantics></math>-branes for arbitrary <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math></a></li><li><a href="#horizon_limit_of_ns5brane">Horizon limit of NS5-brane</a></li><li><a href="#qcd_models">QCD models</a></li></ul></li><li><a href="#further_gauge_theories_induced_by_compactification_and_twisting">Further gauge theories induced by compactification and twisting</a></li></ul></li><li><a href="#formalizations">Formalizations</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a><ul><li><a href="#original_articles">Original articles</a></li><li><a href="#introductions_and_surveys">Introductions and surveys</a></li><li><a href="#"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">AdS_4 / CFT_3</annotation></semantics></math></a></li><li><a href="#_2"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math></a></li><li><a href="#_3"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">AdS_7 / CFT_6</annotation></semantics></math></a></li><li><a href="#generalizations">Generalizations</a></li><li><a href="#Appications">Applications</a><ul><li><a href="#to_gravity">To gravity</a></li><li><a href="#to_particle_physics">To particle physics</a></li><li><a href="#ToCondensedMatterPhysics">To condensed matter physics</a></li></ul></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#examples'>Examples</a></li>
+<ul>
+<li><a href='#AdS5CFT4'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math> – Horizon limit of D3-branes</a></li>
+<li><a href='#AdS7CFT6'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">AdS_7 / CFT_6</annotation></semantics></math> – Horizon limit of M5-branes</a></li>
+<li><a href='#AdS4CFT3'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">AdS_4 / CFT_3</annotation></semantics></math> –Horizon limit of M2-branes</a></li>
+<li><a href='#AdS3CFT2'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>3</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">AdS_3 / CFT_2</annotation></semantics></math> – Horizon limit of D1-D5 brane bound states</a></li>
+<li><a href='#nonconformal_duals'>Non-conformal duals</a></li>
+<ul>
+<li><a href='#horizon_limit_of_branes_for_arbitrary_'>Horizon limit of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Dp</mi></mrow><annotation encoding="application/x-tex">Dp</annotation></semantics></math>-branes for arbitrary <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math></a></li>
+<li><a href='#horizon_limit_of_ns5brane'>Horizon limit of NS5-brane</a></li>
+<li><a href='#qcd_models'>QCD models</a></li>
+</ul>
+<li><a href='#further_gauge_theories_induced_by_compactification_and_twisting'>Further gauge theories induced by compactification and twisting</a></li>
+</ul>
+<li><a href='#formalizations'>Formalizations</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#original_articles'>Original articles</a></li>
+<li><a href='#introductions_and_surveys'>Introductions and surveys</a></li>
+<li><a href='#'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>4</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">AdS_4 / CFT_3</annotation></semantics></math></a></li>
+<li><a href='#_2'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>4</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5 / CFT_4</annotation></semantics></math></a></li>
+<li><a href='#_3'><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>7</mn></msub><mo stretchy="false">/</mo><msub><mi>CFT</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">AdS_7 / CFT_6</annotation></semantics></math></a></li>
+<li><a href='#generalizations'>Generalizations</a></li>
+<li><a href='#Appications'>Applications</a></li>
+<ul>
+<li><a href='#to_gravity'>To gravity</a></li>
+<li><a href='#to_particle_physics'>To particle physics</a></li>
+<li><a href='#ToCondensedMatterPhysics'>To condensed matter physics</a></li>
+</ul>
+</ul>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>The <em>AdS-CFT correspondence</em> (or <em><a href="Maldacena">Maldacena</a> duality</em> ) is a class of cases for which there is strong evidence that it realizes the more general and more conjectural <a class="existingWikiWord" href="/nlab/show/holographic+principle">holographic duality</a>:</p>
@@ -1346,6 +1382,10 @@ margin-left: 0em;
 <p>Jan de Boer, <em>Introduction to AdS/CFT correspondence</em>, <a href="http://www-library.desy.de/preparch/desy/proc/proc02-02/Proceedings/pl.6/deboer_pr.pdf">pdf</a></p>
 </li>
 
+<li id="Natsuume15">
+<p><a class="existingWikiWord" href="/nlab/show/Makoto+Natsuume">Makoto Natsuume</a>, <em>AdS/CFT Duality User Guide</em>, Lecture Notes in Physics 903, Springer 2015 (<a href="https://arxiv.org/abs/1409.3575">arXiv:1409.3575</a>)</p>
+</li>
+
 <li>
 <p>wikipedia: <a href="http://en.wikipedia.org/wiki/AdS/CFT_correspondence">AdS/CFT correspondence</a></p>
 </li>
@@ -1548,14 +1588,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  9, 2018 at 04:41:04.
+  Last revised on November 15, 2018 at 09:44:15.
   See the <a href="https://ncatlab.org/nlab/history/AdS-CFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/62" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(62 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/64" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(64 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-CFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
