--- a/pages/4465.html
+++ b/pages/4465.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9274/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1060,6 +1060,7 @@ margin-left: 0em;
 <li><a href='#References'>References</a></li>
 <ul>
 <li><a href='#ReferencesGeneral'>General</a></li>
+<li><a href='#via_wickrotated_thermal_field_theory'>Via Wick-rotated thermal field theory</a></li>
 <li><a href='#interpretation_in_string_theory'>Interpretation in string theory</a></li>
 <li><a href='#interpretation_as_entanglement_entropy'>Interpretation as entanglement entropy</a></li>
 </ul>
@@ -1138,7 +1139,7 @@ margin-left: 0em;
 <li id="FrolovZelnikov11"><a class="existingWikiWord" href="/nlab/show/Valeri+Frolov">Valeri Frolov</a>, Andrei Zelnikov, <em>Introduction to black hole physics</em>, Oxford 2011</li>
 </ul>
 
-<p>Review form the point of view of <span class="newWikiWord">thermal field theory<a href="/nlab/new/thermal+field+theory">?</a></span>:</p>
+<p>Review form the point of view of <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">thermal field theory</a>:</p>
 
 <ul>
 <li id="FullingRuijsenaars87">S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</li>
@@ -1214,6 +1215,20 @@ margin-left: 0em;
 <li>Ahmed Almheiri, <a class="existingWikiWord" href="/nlab/show/Donald+Marolf">Donald Marolf</a>, <a class="existingWikiWord" href="/nlab/show/Joseph+Polchinski">Joseph Polchinski</a>, James Sully, <em>Black holes: complementarity or firewalls?</em>, (<a href="http://arxiv.org/abs/arXiv:1207.3123">arXiv:1207.3123</a>)</li>
 </ul>
 
+<h3 id="via_wickrotated_thermal_field_theory">Via Wick-rotated thermal field theory</h3>
+
+<p>Discussion via <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> to <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on spacetimes with compact/periodic Euclidean time (<a class="existingWikiWord" href="/nlab/show/thermal+field+theory">thermal field theory</a> on <a class="existingWikiWord" href="/nlab/show/curved+spacetimes">curved spacetimes</a>) is in</p>
+
+<ul>
+<li id="FullingRuijsenaars87">
+<p>S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</p>
+</li>
+
+<li id="GibbonsPerry78">
+<p><a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, Malcolm J. Perry, <em>Black Holes and Thermal Green Functions</em>, Vol. 358, No. 1695 (1978) (<a href="https://www.jstor.org/stable/79482">jstor:79482</a>)</p>
+</li>
+</ul>
+
 <h3 id="interpretation_in_string_theory">Interpretation in string theory</h3>
 
 <p>Rieview of interpretation of <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a> includes</p>
@@ -1259,14 +1274,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 13:07:30.
+  Last revised on November 15, 2018 at 09:24:06.
   See the <a href="https://ncatlab.org/nlab/history/Bekenstein-Hawking entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bekenstein-Hawking+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bekenstein-Hawking+entropy/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/Bekenstein-Hawking+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bekenstein-Hawking+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bekenstein-Hawking entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
