--- a/pages/6697.html
+++ b/pages/6697.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3154/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3154/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -666,6 +666,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, <em>Anti-de-Sitter spacetime and its uses</em> (<a href="http://arxiv.org/abs/1110.1206">arXiv:1110.1206</a>)</p>
 </li>
 
+<li id="Natsuume15">
+<p><a class="existingWikiWord" href="/nlab/show/Makoto+Natsuume">Makoto Natsuume</a>, section 6 of <em>AdS/CFT Duality User Guide</em>, Lecture Notes in Physics 903, Springer 2015 (<a href="https://arxiv.org/abs/1409.3575">arXiv:1409.3575</a>)</p>
+</li>
+
 <li>
 <p>Wikipedia (English): <a href="http://en.wikipedia.org/wiki/Anti_de_Sitter_space">anti de Sitter space</a></p>
 </li>
@@ -678,20 +682,26 @@ margin-left: 0em;
 <p>Leszek M. Sokolowski, <em>The bizarre anti-de Sitter spacetime</em>, International Journal of Geometric Methods in Modern Physics 13 no.9 (2016) 1630016 (<a href="https://arxiv.org/abs/1611.01118">arXiv:1611.01118</a>)</p>
 </li>
 </ul>
+
+<p>Discussion of thermal <a class="existingWikiWord" href="/nlab/show/Wick+rotation">Wick rotation</a> on global <a class="existingWikiWord" href="/nlab/show/anti-de+Sitter+spacetime">anti-de Sitter spacetime</a> (which is already periodic in <em>real</em> time) to <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> with periodic <em>imaginary</em> time is in</p>
+
+<ul>
+<li id="AllenFolacciGibbons87">B. Allen, A. Folacci, <a class="existingWikiWord" href="/nlab/show/Gary+Gibbons">Gary Gibbons</a>, <em>Anti-de Sitter space at finite temperature</em>, Physics Letters B Volume 189, Issue 3, 7 May 1987, Pages 304-310 (<a href="https://doi.org/10.1016/0370-2693(87)91437-7">doi:10.1016/0370-2693(87)91437-7</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 15, 2018 at 08:57:08.
+  Last revised on November 15, 2018 at 09:43:53.
   See the <a href="https://ncatlab.org/nlab/history/anti de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti+de+Sitter+spacetime/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti+de+Sitter+spacetime/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/anti de Sitter spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
