--- a/pages/4442.html
+++ b/pages/4442.html
@@ -1077,7 +1077,7 @@ margin-left: 0em;
 
 <p>For the archetypical case of AdS/CFT relating <a class="existingWikiWord" href="/nlab/show/N%3D4+D%3D4+super+Yang-Mills+theory">N=4 D=4 super Yang-Mills theory</a> to <a class="existingWikiWord" href="/nlab/show/type+IIB+string+theory">type IIB string theory</a> on <a class="existingWikiWord" href="/nlab/show/super+anti+de+Sitter+spacetime">super anti de Sitter spacetime</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>5</mn></msup></mrow><annotation encoding="application/x-tex">AdS_5 \times S^5</annotation></semantics></math>, fine detailed checks of the correspondence have been performed (<a href="#BeisertEtAl10">Beisert et al. 10</a>, <a href="#Escobedo12">Escobedo 12</a>), see the section <em><a href="#Checks">Checks</a></em> below.</p>
 
-<p>If one relaxes the various assumptions that go into this exact form of the correspondence (<a class="existingWikiWord" href="/nlab/show/conformal+invariance">conformal invariance</a>, <a class="existingWikiWord" href="/nlab/show/supersymmetry">supersymmetry</a>, <a class="existingWikiWord" href="/nlab/show/large+N+limit">large N limit</a>, <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter geometry</a>) there is still a correspondence, albeit less exact. Such approximate forms of the AdS/CFT correspondence are being argued to be of use for understanding of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> in <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) and for various models in <a class="existingWikiWord" href="/nlab/show/solid+state+physics">solid state physics</a> (see <a href="#HartnollLucasSachdev16">Hartnoll-Lucas-Sachdev 16</a><em><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></em>).</p>
+<p>If one relaxes the various assumptions that go into this exact form of the correspondence (<a class="existingWikiWord" href="/nlab/show/conformal+invariance">conformal invariance</a>, <a class="existingWikiWord" href="/nlab/show/supersymmetry">supersymmetry</a>, <a class="existingWikiWord" href="/nlab/show/large+N+limit">large N limit</a>, <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter geometry</a>) there is still a correspondence, albeit less exact. Such approximate forms of the AdS/CFT correspondence are being argued to be of use for understanding of the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a> in <a class="existingWikiWord" href="/nlab/show/quantum+chromodynamics">quantum chromodynamics</a> (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) and for various models in <a class="existingWikiWord" href="/nlab/show/solid+state+physics">solid state physics</a> (see <a href="#HartnollLucasSachdev16">Hartnoll-Lucas-Sachdev 16</a> and see at <em><a class="existingWikiWord" href="/nlab/show/AdS-CFT+in+condensed+matter+physics">AdS-CFT in condensed matter physics</a></em>).</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -1661,14 +1661,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 02:52:15.
+  Last revised on November 16, 2018 at 03:27:59.
   See the <a href="https://ncatlab.org/nlab/history/AdS-CFT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/67" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(67 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AdS-CFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AdS-CFT/68" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(68 revisions)</span> | <a href="/nlab/show/diff/AdS-CFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AdS-CFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/AdS-CFT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
