--- a/pages/3522.html
+++ b/pages/3522.html
@@ -982,8 +982,8 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 <p>Surveys and introductions include</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Tom+Goodwillie">Tom Goodwillie</a>, <em>The differential calculus of homotopy functors</em>, ICM contribution (<a href="http://math.mit.edu/~nrozen/juvitop/goodwillie-icm.pdf">pdf</a>)</p>
+<li id="Goodwillie90">
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Goodwillie">Tom Goodwillie</a>, <em>The differential calculus of homotopy functors</em>, Proceedings of the International Congress of Mathematicians. Vol. 1. 1990 (<a href="http://math.mit.edu/~nrozen/juvitop/goodwillie-icm.pdf">pdf</a>)</p>
 </li>
 
 <li>
@@ -1106,14 +1106,14 @@ e^{x - 1} \cdot e^{-\frac{(x - 1)^2}{2}} \cdot e^{\frac{(x - 1)^3}{3}} \ldots = 
 
 <div class="revisedby">
   <p>
-  Last revised on November  6, 2018 at 07:10:52.
+  Last revised on November 16, 2018 at 04:33:48.
   See the <a href="https://ncatlab.org/nlab/history/Goodwillie calculus" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/50" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(50 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Goodwillie+calculus" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goodwillie+calculus/51" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(51 revisions)</span> | <a href="/nlab/show/diff/Goodwillie+calculus" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goodwillie+calculus" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Goodwillie calculus/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
