--- a/pages/5059.html
+++ b/pages/5059.html
@@ -2014,9 +2014,9 @@ margin-left: 0em;
 
 <h3 id="AsPartOfTheAdSCFTCorrespodence">As part of the AdS-CFT correspondence</h3>
 
-<p>By the above discussion, Green-Schwarz super <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-branes are consistent on <a class="existingWikiWord" href="/nlab/show/superspacetimes">superspacetimes</a> that satisfy the respective higher <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> <a class="existingWikiWord" href="/nlab/show/equations+of+motion">equations of motion</a>. These turn out to have solutions which exhibit <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> in essentially just the combinations of dimensions and supersymmetries that the original Green-Schwarz sigma-models exist in, hence they look like precisely like the <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-pertrubative</a> avatars of whatever these <a class="existingWikiWord" href="/nlab/show/sigma+models">sigma models</a> give the <a class="existingWikiWord" href="/nlab/show/perturbation+theory">perturbation theory</a> of by <a class="existingWikiWord" href="/nlab/show/second+quantization">second quantization</a>. (See at <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a> for more on this correspondence between branes in string perturbation theory and black branes in supergravity.)</p>
+<p>By the above discussion, Green-Schwarz super <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math>-branes are consistent on <a class="existingWikiWord" href="/nlab/show/superspacetimes">superspacetimes</a> that satisfy the respective higher <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a> <a class="existingWikiWord" href="/nlab/show/equations+of+motion">equations of motion</a>. These turn out to have solutions which exhibit <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> in essentially just the combinations of dimensions and supersymmetries that the original Green-Schwarz sigma-models exist in, hence they look precisely like the <a class="existingWikiWord" href="/nlab/show/non-perturbative+quantum+field+theory">non-perturbative</a> avatars of whatever these <a class="existingWikiWord" href="/nlab/show/sigma+models">sigma models</a> give the <a class="existingWikiWord" href="/nlab/show/perturbation+theory">perturbation theory</a> of by <a class="existingWikiWord" href="/nlab/show/second+quantization">second quantization</a>. (See at <a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a> for more on this correspondence between branes in string perturbation theory and black branes in supergravity.)</p>
 
-<p>Moreover, the near-horizon geomtries of these <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> is always <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> times orthogonal directions.</p>
+<p>Moreover, the near-horizon geometries of these <a class="existingWikiWord" href="/nlab/show/black+branes">black branes</a> are always <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a> times orthogonal directions.</p>
 
 <p>Therefore it is natural to consider the perturbation of the Green-Schwarz sigma-models around their asymptotic embeddings into AdS spaces, hence effectively the perturbation theory of the degrees of freedom at those naked singularity at which the corresponding black brane sits.</p>
 
@@ -2676,14 +2676,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 22, 2018 at 06:27:48.
+  Last revised on November 16, 2018 at 05:14:29.
   See the <a href="https://ncatlab.org/nlab/history/Green-Schwarz action functional" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Green-Schwarz+action+functional" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Green-Schwarz+action+functional/144" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(144 revisions)</span> | <a href="/nlab/show/diff/Green-Schwarz+action+functional" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Green-Schwarz+action+functional" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Green-Schwarz+action+functional" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Green-Schwarz+action+functional/145" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(145 revisions)</span> | <a href="/nlab/show/diff/Green-Schwarz+action+functional" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Green-Schwarz+action+functional" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Green-Schwarz action functional/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
