--- a/pages/9880.html
+++ b/pages/9880.html
@@ -450,6 +450,7 @@ margin-left: 0em;
 <li><a href='#examples'>Examples</a></li>
 <ul>
 <li><a href='#confinement_and_the_mass_gap'>Confinement and the mass gap</a></li>
+<li><a href='#quarkgluon_plasma'>Quark-gluon plasma</a></li>
 <li><a href='#WorldsheetAndBraneInstantons'>Worldsheet and brane instantons in string/M-theory</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
@@ -488,7 +489,11 @@ margin-left: 0em;
 
 <h3 id="confinement_and_the_mass_gap">Confinement and the mass gap</h3>
 
-<p>A central example of a non-perturbative effect is <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> (hence the “<a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a>”) in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>. Perturbation theory is not suited to explain this (e.g <a href="http://arxiv.org/abs/hep-ph/9410287">Espiru 94, section 7</a>).</p>
+<p>A central example of a non-perturbative effect is <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> (hence the “<a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a>”) in <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a> at low <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a>. Perturbation theory is not suited to explain this (e.g <a href="http://arxiv.org/abs/hep-ph/9410287">Espiru 94, section 7</a>).</p>
+
+<h3 id="quarkgluon_plasma">Quark-gluon plasma</h3>
+
+<p>At the other extreme of high <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> QCD, also the <a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a>, while now <a class="existingWikiWord" href="/nlab/show/confinement">deconfined</a> is thought to be strongly coupled.</p>
 
 <h3 id="WorldsheetAndBraneInstantons">Worldsheet and brane instantons in string/M-theory</h3>
 
@@ -709,14 +714,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 08:18:43.
+  Last revised on November 17, 2018 at 03:29:15.
   See the <a href="https://ncatlab.org/nlab/history/non-perturbative effect" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/non-perturbative+effect" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/non-perturbative+effect/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/non-perturbative+effect" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/non-perturbative+effect" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/non-perturbative effect/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
