--- a/pages/10305.html
+++ b/pages/10305.html
@@ -901,11 +901,15 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> and <a class="existingWikiWord" href="/nlab/show/mesons">mesons</a> are bound states of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> are bound states of <a class="existingWikiWord" href="/nlab/show/quarks">quarks</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> are bound states of <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> (<a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a>) and <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclie</a> of <a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> are bound states of those <a class="existingWikiWord" href="/nlab/show/hadrons">hadrons</a> which are <a class="existingWikiWord" href="/nlab/show/nucleons">nucleons</a>, namely <a class="existingWikiWord" href="/nlab/show/protons">protons</a> and <a class="existingWikiWord" href="/nlab/show/neutrons">neutrons</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/atoms">atoms</a> are <a class="existingWikiWord" href="/nlab/show/bound+states">bound states</a> of <a class="existingWikiWord" href="/nlab/show/nucleus+%28physics%29">nuclei</a> and <a class="existingWikiWord" href="/nlab/show/electrons">electrons</a></p>
 </li>
 
 <li>
@@ -942,14 +946,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 11, 2018 at 05:40:26.
+  Last revised on November 17, 2018 at 03:04:16.
   See the <a href="https://ncatlab.org/nlab/history/bound state" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/bound+state" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/bound+state/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/bound+state" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/bound+state" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/bound state/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
