--- a/pages/19940.html
+++ b/pages/19940.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      experimental observation in nLab
+      phase of matter in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      experimental observation
+      phase of matter
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9282/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -892,86 +892,52 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#experiments'>Experiments</a></li>
-<li><a href='#related_entries'>Related entries</a></li>
-<li><a href='#relation_to_mathematical_proof'>Relation to mathematical proof</a></li>
-<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#examples'>Examples</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
-<h2 id="experiments">Experiments</h2>
+<h2 id="idea">Idea</h2>
+
+<p>concept in <a class="existingWikiWord" href="/nlab/show/thermodynamics">thermodynamics</a>/<a class="existingWikiWord" href="/nlab/show/condensed+matter+physics">condensed matter physics</a></p>
+
+<h2 id="examples">Examples</h2>
 
 <ul>
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/LHC">LHC</a>, <a class="existingWikiWord" href="/nlab/show/LIGO">LIGO</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/solid+state+physics">solid</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/RHIC">RHIC</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/fluid+dynamics">fluid</a></p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Super-Kamiokande">Super-Kamiokande</a></p>
+<p>gas</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/EDGES">EDGES</a></p>
+<p><span class="newWikiWord">plasma<a href="/nlab/new/plasma">?</a></span></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quark-gluon+plasma">quark-gluon plasma</a></p>
 </li>
 </ul>
 
-<h2 id="related_entries">Related entries</h2>
+<p>Maybe also</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/measurement">measurement</a>, <a class="existingWikiWord" href="/nlab/show/quantum+measurement">quantum measurement</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/theory+%28physics%29">theory (physics)</a>, <a class="existingWikiWord" href="/nlab/show/coordination">coordination</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/observable+universe">observable universe</a></p>
-</li>
-
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/standard+model+of+particle+physics">standard model of particle physics</a>, <a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a></p>
-</li>
-</ul>
-
-<h2 id="relation_to_mathematical_proof">Relation to mathematical proof</h2>
-
-<p>In (<a href="JaffeQuinn93">Jaffe-Quinn 93, p. 2</a>) it was claimed that</p>
-
-<blockquote>
-<p>the role of rigorous <a class="existingWikiWord" href="/nlab/show/proof">proof</a> in mathematics is functionally <a class="existingWikiWord" href="/nlab/show/analogy">analogous</a> to the role of <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> in the natural sciences</p>
-</blockquote>
-
-<p>Responses to that claim may be found <a href="http://arxiv.org/abs/math/9404229">here</a>.</p>
-
-<h2 id="related_concepts">Related concepts</h2>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/local+observables">local observables</a>, <a class="existingWikiWord" href="/nlab/show/spacetime+support">spacetime support</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/topological+order">topological order</a></li>
 </ul>
 
 <h2 id="references">References</h2>
 
-<ul>
-<li>
-<p>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Experiment">Experiment</a></em></p>
-</li>
-
-<li>
-<p>Wikipedia. <em><a href="http://en.wikipedia.org/wiki/Observation">Observation</a></em></p>
-</li>
-</ul>
-
-<p>Discussion relating experiment to mathematical <a class="existingWikiWord" href="/nlab/show/proof">proof</a> includes</p>
+<p>See also</p>
 
 <ul>
-<li id="JaffeQuinn93"><a class="existingWikiWord" href="/nlab/show/Arthur+Jaffe">Arthur Jaffe</a>, <a class="existingWikiWord" href="/nlab/show/Frank+Quinn">Frank Quinn</a>, <em>“Theoretical Mathematics”: Towards a cultural synthesis of mathematics and theoretical physics</em>, Bulletin of the AMS, Volume 29,Number 1, July 1993 (<a href="http://arxiv.org/abs/math/9307227">arXiv:math/9307227</a>)</li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Phase_(matter)">Phase_(matter)</a></em></li>
 </ul>
 </body></html>
 
@@ -979,22 +945,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 03:50:42.
-  See the <a href="https://ncatlab.org/nlab/history/experimental observation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November 17, 2018 at 03:21:30.
+  See the <a href="https://ncatlab.org/nlab/history/phase of matter" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/experimental+observation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/experimental+observation/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/experimental+observation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/experimental+observation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/experimental observation/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/phase+of+matter" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/phase of matter/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/experimental+observation" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/phase+of+matter" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/experimental+observation" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/phase+of+matter" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/experimental+observation" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/phase+of+matter" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
