--- a/pages/8209.html
+++ b/pages/8209.html
@@ -909,7 +909,7 @@ margin-left: 0em;
 
 <p>Despite the <a class="existingWikiWord" href="/nlab/show/confinement">deconfinement</a>, the quark-gluon plasma is thought to be strongly <a class="existingWikiWord" href="/nlab/show/coupling+constant">coupled</a>, meaning that its properties are <a class="existingWikiWord" href="/nlab/show/non-perturbative+effects">non-perturbative effects</a> requiring discussion of <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> as a <a class="existingWikiWord" href="/nlab/show/non-perturbative+field+theory">non-perturbative field theory</a>. With an exact such theory largely missing, much of the theoretical discussion of the quark-gluon plasma involves <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer simulation. Indication for strong coupling of the QG-plasma comes from the nature of the <em>elliptic flow</em> seen both in <a class="existingWikiWord" href="/nlab/show/experiment">experiment</a> as well as in these computer simulations, which shows <a class="existingWikiWord" href="/nlab/show/hydrodynamic">hydrodynamic</a> behaviour with extremely small <a class="existingWikiWord" href="/nlab/show/shear+viscosity">shear viscosity</a> (e.g. <a href="#Shuryak01">Shuryak 01</a>, <a href="#Chakraborty12">Chakraborty 12</a>).</p>
 
-<p>It has been proposed (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) that, therefore, an analytic approach to a description of hte quark-gluon plasma (i.e. not just via <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer experiment) might be given by approximate <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (see e.g. <a href="#BiagazziCotrone12">Biagazzi-Cotrone 12</a>).</p>
+<p>It has been proposed (<a href="#PolicastroSonStarinets01">Policastro-Son-Starinets 01</a>) that, therefore, an analytic approach to a description of the quark-gluon plasma (i.e. not just via <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> computer experiment) might be given by approximate <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> (see e.g. <a href="#BiagazziCotrone12">Biagazzi-Cotrone 12</a>). The difficulty with this approach is that for <a class="existingWikiWord" href="/nlab/show/QCD">QCD</a> (as opposed to <a class="existingWikiWord" href="/nlab/show/N%3D4+D%3D4+SYM">N=4 D=4 SYM</a>) <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a> applies only to some approximation.</p>
 
 <h2 id="references">References</h2>
 
@@ -1006,7 +1006,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 17, 2018 at 03:59:06.
+  Last revised on November 17, 2018 at 04:02:39.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
